--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@
   --bg-light-slate-blue: #7857ff;
   --bg-light-royal-blue: #2e2be9;
   --circle-blue-violet: #4e21ca;
-  --circle-persian-blue: #2421ca00;
+  --circle-persian-blue: #2421ca;
 
   /* Text */
   --text-white: #ffffff;
@@ -33,6 +33,7 @@ h2,
 h3,
 h4,
 p {
+  font-size: inherit;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -69,5 +70,57 @@ img {
 
 /* Result */
 .result {
-  background-color: var(--bg-light-slate-blue);
+  background: linear-gradient(
+    180deg,
+    var(--bg-light-slate-blue) 0%,
+    var(--bg-light-royal-blue) 100%
+  );
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 40px;
+  border-radius: 0 0 8% 8%;
+}
+.result__title {
+  margin-bottom: 25px;
+  color: var(--text-light-lavender);
+  line-height: 1.2;
+}
+.result__score {
+  padding: 28px;
+  margin: 0 auto;
+  width: 140px;
+  height: 140px;
+  background: linear-gradient(
+    180deg,
+    hsla(256, 72%, 46%, 1) 0%,
+    hsla(241, 72%, 46%, 0) 100%
+  );
+  border-radius: 50%;
+  margin-bottom: 25px;
+}
+.result__score--number {
+  font-size: 54px;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
+.result__score--out-of {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text-light-lavender);
+  opacity: 0.7;
+}
+.result__text {
+  margin: 0 auto;
+  max-width: 280px;
+}
+.result__text--description {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.result__text--description--highlight {
+  font-size: 16px;
+  line-height: 1.3;
+  color: var(--text-pale-blue);
+  opacity: 0.9;
 }
